--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                                 <div class="select-item">PT</div>
                             </div>
                         </div>
-                        <div class="col-md-12 col-sm-12 title-inputs">Вартість авто</div>
+                        <div class="col-md-12 col-sm-12 title-inputs">Вартість авто (€)</div>
                         <input class="text-field__input col-md-3" type="number" name="" id="" placeholder="Вартість авто">
-                        <div class="col-md-12 col-sm-12 title-inputs">Вартість послуг</div>
+                        <div class="col-md-12 col-sm-12 title-inputs">Вартість послуг (€)</div>
                         <input class="text-field__input col-md-3" type="number" name="" id="" placeholder="Вартість послуг">
                         <div class="btn-calc">Розрахувати вартість</div>
                     </div>
@@ -79,9 +79,9 @@
                                 <div class="select-item">PT</div>
                             </div>
                         </div>
-                        <div class="col-md-12 col-sm-12 title-inputs">Вартість авто</div>
+                        <div class="col-md-12 col-sm-12 title-inputs">Вартість авто (€)</div>
                         <input class="text-field__input col-md-3" type="number" name="" id="" placeholder="Вартість авто">
-                        <div class="col-md-12 col-sm-12 title-inputs">Вартість послуг</div>
+                        <div class="col-md-12 col-sm-12 title-inputs">Вартість послуг (€)</div>
                         <input class="text-field__input col-md-3" type="number" name="" id="" placeholder="Вартість послуг">
                         <div class="btn-calc">Розрахувати вартість</div>
                     </div>
