--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12 col-sm-12">
-                <div class="col-md-12 col-sm-12 tabs-wrapper">
+                <div class="col-md-12 col-12 tabs-wrapper">
                     <div class="tab-main active">Калькулятор вартості</div>
                     <div class="tab-main">Оптовий калькулятор</div>
                 </div>
@@ -20,7 +20,7 @@
                 <div class="col-md-12 col-sm-12 calc-cost">
                     <div class="col-md-5 col-sm-5 inputs">
                         <div class="col-md-12 col-sm-12 title-inputs">Виберіть країну</div>
-                        <div class="select col-md-3">
+                        <div class="select col-md-3 col-7">
                             <div class="select-header"><span class="select-current">DE</span></div>
                             <div class="select-body">
                                 <div class="select-item">DE</div>
@@ -36,35 +36,35 @@
                             </div>
                         </div>
                         <div class="col-md-12 col-sm-12 title-inputs">Вартість авто (€)</div>
-                        <input class="text-field__input col-md-3" type="number" name="" id="" placeholder="Вартість авто">
+                        <input class="text-field__input col-md-3 col-7" type="number" name="" id="" placeholder="Вартість авто">
                         <div class="col-md-12 col-sm-12 title-inputs">Вартість послуг (€)</div>
-                        <input class="text-field__input col-md-3" type="number" name="" id="" placeholder="Вартість послуг">
+                        <input class="text-field__input col-md-3 col-7" type="number" name="" id="" placeholder="Вартість послуг">
                         <div class="btn-calc">Розрахувати вартість</div>
                     </div>
-                    <div class="col-md-5 col-sm-5 outputs">
-                        <div class="left-info col-md-7 col-sm-7">Вартість авто + аукціонний збір</div>
-                        <div class="right-info col-md-5 col-sm-5">0 €</div>
-                        <div class="left-info col-md-7 col-sm-7">Доставка до України</div>
-                        <div class="right-info col-md-5 col-sm-5">0 €</div>
-                        <div class="left-info col-md-7 col-sm-7">Брокер</div>
-                        <div class="right-info col-md-5 col-sm-5">250 €</div>
-                        <div class="left-info col-md-7 col-sm-7">Послуги з підбору</div>
-                        <div class="right-info col-md-5 col-sm-5">0 €</div>
-                        <div class="left-info col-md-7 col-sm-7">Сертифікація</div>
-                        <div class="right-info col-md-5 col-sm-5">100 €</div>
-                        <div class="left-info col-md-7 col-sm-7">Кнопка</div>
-                        <div class="right-info col-md-5 col-sm-5">200 €</div>
-                        <div class="left-info col-md-7 col-sm-7">Свіфт переказ</div>
-                        <div class="right-info col-md-5 col-sm-5">0 €</div>
-                        <div class="left-info col-md-7 col-sm-7"  style="font-weight: 700;">Загальна вартість авто</div>
-                        <div class="right-info col-md-5 col-sm-5" style="font-weight: 700;">0 €</div>
+                    <div class="col-md-5 col-12 outputs">
+                        <div class="left-info col-md-7 col-9">Вартість авто + аукціонний збір</div>
+                        <div class="right-info col-md-5 col-3">0 €</div>
+                        <div class="left-info col-md-7 col-9">Доставка до України</div>
+                        <div class="right-info col-md-5 col-3">0 €</div>
+                        <div class="left-info col-md-7 col-9">Брокер</div>
+                        <div class="right-info col-md-5 col-3">250 €</div>
+                        <div class="left-info col-md-7 col-9">Послуги з підбору</div>
+                        <div class="right-info col-md-5 col-3">0 €</div>
+                        <div class="left-info col-md-7 col-9">Сертифікація</div>
+                        <div class="right-info col-md-5 col-3">100 €</div>
+                        <div class="left-info col-md-7 col-9">Кнопка</div>
+                        <div class="right-info col-md-5 col-3">200 €</div>
+                        <div class="left-info col-md-7 col-9">Свіфт переказ</div>
+                        <div class="right-info col-md-5 col-3">0 €</div>
+                        <div class="left-info col-md-7 col-9" style="font-weight: 700;">Загальна вартість авто</div>
+                        <div class="right-info col-md-5 col-3" style="font-weight: 700;">0 €</div>
                     </div>
                 </div>
 
                 <div class="col-md-12 col-sm-12 calc-wholesale">
                     <div class="col-md-5 col-sm-5 inputs">
                         <div class="col-md-12 col-sm-12 title-inputs">Виберіть країну</div>
-                        <div class="select col-md-3">
+                        <div class="select col-md-3 col-7">
                             <div class="select-header"><span class="select-current">DE</span></div>
                             <div class="select-body">
                                 <div class="select-item">DE</div>
@@ -79,29 +79,29 @@
                                 <div class="select-item">PT</div>
                             </div>
                         </div>
-                        <div class="col-md-12 col-sm-12 title-inputs">Вартість авто (€)</div>
-                        <input class="text-field__input col-md-3" type="number" name="" id="" placeholder="Вартість авто">
+                        <div class="col-md-12 col-12 title-inputs">Вартість авто (€)</div>
+                        <input class="text-field__input col-md-3 col-7" type="number" name="" id="" placeholder="Вартість авто">
                         <div class="col-md-12 col-sm-12 title-inputs">Вартість послуг (€)</div>
-                        <input class="text-field__input col-md-3" type="number" name="" id="" placeholder="Вартість послуг">
+                        <input class="text-field__input col-md-3 col-7" type="number" name="" id="" placeholder="Вартість послуг">
                         <div class="btn-calc">Розрахувати вартість</div>
                     </div>
-                    <div class="col-md-5 col-sm-5 outputs">
-                        <div class="left-info col-md-7 col-sm-7">Вартість авто + аукціонний збір</div>
-                        <div class="right-info col-md-5 col-sm-5">0 €</div>
-                        <div class="left-info col-md-7 col-sm-7">Доставка до України</div>
-                        <div class="right-info col-md-5 col-sm-5">0 €</div>
-                        <div class="left-info col-md-7 col-sm-7">Брокер</div>
-                        <div class="right-info col-md-5 col-sm-5">250 €</div>
-                        <div class="left-info col-md-7 col-sm-7">Послуги з підбору</div>
-                        <div class="right-info col-md-5 col-sm-5">0 €</div>
-                        <div class="left-info col-md-7 col-sm-7">Сертифікація</div>
-                        <div class="right-info col-md-5 col-sm-5">60 €</div>
-                        <div class="left-info col-md-7 col-sm-7">Кнопка</div>
-                        <div class="right-info col-md-5 col-sm-5">200 €</div>
-                        <div class="left-info col-md-7 col-sm-7">Свіфт переказ</div>
-                        <div class="right-info col-md-5 col-sm-5">0 €</div>
-                        <div class="left-info col-md-7 col-sm-7"  style="font-weight: 700;">Загальна вартість авто</div>
-                        <div class="right-info col-md-5 col-sm-5" style="font-weight: 700;">0 €</div>
+                    <div class="col-md-5 col-12 outputs">
+                        <div class="left-info col-md-7 col-9">Вартість авто + аукціонний збір</div>
+                        <div class="right-info col-md-5 col-3">0 €</div>
+                        <div class="left-info col-md-7 col-9">Доставка до України</div>
+                        <div class="right-info col-md-5 col-3">0 €</div>
+                        <div class="left-info col-md-7 col-9">Брокер</div>
+                        <div class="right-info col-md-5 col-3">250 €</div>
+                        <div class="left-info col-md-7 col-9">Послуги з підбору</div>
+                        <div class="right-info col-md-5 col-3">0 €</div>
+                        <div class="left-info col-md-7 col-9">Сертифікація</div>
+                        <div class="right-info col-md-5 col-3">60 €</div>
+                        <div class="left-info col-md-7 col-9">Кнопка</div>
+                        <div class="right-info col-md-5 col-3">200 €</div>
+                        <div class="left-info col-md-7 col-9">Свіфт переказ</div>
+                        <div class="right-info col-md-5 col-3">0 €</div>
+                        <div class="left-info col-md-7 col-9"  style="font-weight: 700;">Загальна вартість авто</div>
+                        <div class="right-info col-md-5 col-3" style="font-weight: 700;">0 €</div>
                     </div>
                 </div>
 
