--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                         <div class="col-md-12 col-sm-12 title-inputs">Вартість послуг (€)</div>
                         <input class="text-field__input col-md-3 col-7" type="number" name="" id="" placeholder="Вартість послуг">
                         <div class="btn-calc">Розрахувати вартість</div>
+                        <div class="col-md-12 col-12">
+                            <div class="btn-clearance"><a href="https://www.qdpro.com.ua/uk/calc/cars">Порахувати розмитнення</a></div>
+                        </div>
                     </div>
                     <div class="col-md-5 col-12 outputs">
                         <div class="left-info col-md-7 col-9">Вартість авто + аукціонний збір</div>
@@ -57,7 +60,7 @@
                         <div class="left-info col-md-7 col-9">Свіфт переказ</div>
                         <div class="right-info col-md-5 col-3">0 €</div>
                         <div class="left-info col-md-7 col-9" style="font-weight: 700;">Загальна вартість авто</div>
-                        <div class="right-info col-md-5 col-3" style="font-weight: 700;">0 €</div>
+                        <div class="right-info col-md-5 col-3" style="font-weight: 700; color: #ef7230;">0 €</div>
                     </div>
                 </div>
 
@@ -84,6 +87,9 @@
                         <div class="col-md-12 col-sm-12 title-inputs">Вартість послуг (€)</div>
                         <input class="text-field__input col-md-3 col-7" type="number" name="" id="" placeholder="Вартість послуг">
                         <div class="btn-calc">Розрахувати вартість</div>
+                        <div class="col-md-12 col-12">
+                            <div class="btn-clearance"><a href="https://www.qdpro.com.ua/uk/calc/cars">Порахувати розмитнення</a></div>
+                        </div>
                     </div>
                     <div class="col-md-5 col-12 outputs">
                         <div class="left-info col-md-7 col-9">Вартість авто + аукціонний збір</div>
@@ -100,8 +106,8 @@
                         <div class="right-info col-md-5 col-3">200 €</div>
                         <div class="left-info col-md-7 col-9">Свіфт переказ</div>
                         <div class="right-info col-md-5 col-3">0 €</div>
-                        <div class="left-info col-md-7 col-9"  style="font-weight: 700;">Загальна вартість авто</div>
-                        <div class="right-info col-md-5 col-3" style="font-weight: 700;">0 €</div>
+                        <div class="left-info col-md-7 col-9" style="font-weight: 700;">Загальна вартість авто</div>
+                        <div class="right-info col-md-5 col-3" style="font-weight: 700; color: red;">0 €</div>
                     </div>
                 </div>
 
