--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <div class="left-info col-md-7 col-9" style="font-weight: 700;">Загальна вартість авто</div>
                         <div class="right-info col-md-5 col-3" style="font-weight: 700; color: #ef7230;">0 €</div>
                         <div class="col-md-12 col-12">
-                            <div class="btn-clearance"><a href="https://www.qdpro.com.ua/uk/calc/cars" target="_blank">Порахувати розмитнення</a></div>
+                            <a href="https://www.qdpro.com.ua/uk/calc/cars" target="_blank"><div class="btn-clearance">Порахувати розмитнення</div></a>
                         </div>
                     </div>
                 </div>
@@ -106,7 +106,7 @@
                         <div class="left-info col-md-7 col-9" style="font-weight: 700;">Загальна вартість авто</div>
                         <div class="right-info col-md-5 col-3" style="font-weight: 700; color: #ef7230;">0 €</div>
                         <div class="col-md-12 col-12">
-                            <div class="btn-clearance"><a href="https://www.qdpro.com.ua/uk/calc/cars" target="_blank">Порахувати розмитнення</a></div>
+                            <a href="https://www.qdpro.com.ua/uk/calc/cars" target="_blank"><div class="btn-clearance">Порахувати розмитнення</div></a>
                         </div>
                     </div>
                 </div>
