--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <div class="left-info col-md-7 col-9">Свіфт переказ</div>
                         <div class="right-info col-md-5 col-3">0 €</div>
                         <div class="left-info col-md-7 col-9" style="font-weight: 700;">Загальна вартість авто</div>
-                        <div class="right-info col-md-5 col-3" style="font-weight: 700; color: #ef7230;">0 €</div>
+                        <div class="right-info col-md-5 col-3" style="font-weight: 700; color: #007FFF;">0 €</div>
                         <div class="col-md-12 col-12">
                             <a href="https://www.qdpro.com.ua/uk/calc/cars" target="_blank"><div class="btn-clearance">Порахувати розмитнення</div></a>
                         </div>
@@ -104,7 +104,7 @@
                         <div class="left-info col-md-7 col-9">Свіфт переказ</div>
                         <div class="right-info col-md-5 col-3">0 €</div>
                         <div class="left-info col-md-7 col-9" style="font-weight: 700;">Загальна вартість авто</div>
-                        <div class="right-info col-md-5 col-3" style="font-weight: 700; color: #ef7230;">0 €</div>
+                        <div class="right-info col-md-5 col-3" style="font-weight: 700; color: #007FFF;">0 €</div>
                         <div class="col-md-12 col-12">
                             <a href="https://www.qdpro.com.ua/uk/calc/cars" target="_blank"><div class="btn-clearance">Порахувати розмитнення</div></a>
                         </div>
