--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
 
                         <div class="col-md-12 col-sm-12 title-inputs">Доставка по Європi (€)</div>
                         <input class="text-field__input col-md-3 col-7" type="number" name="" id="" placeholder="Доставка по Європi">
-                        
 
                         <div class="col-md-12 col-sm-12 title-inputs">Кнопка</div>
                         <input type="checkbox" role="switch" class="neon">
@@ -56,7 +55,7 @@
                         <div class="left-info col-md-7 col-9">Вартість авто + аукціонний збір</div>
                         <div class="right-info col-md-5 col-3">0 €</div>
                         <div class="left-info col-md-7 col-9">Доставка до України</div>
-                        <div class="right-info col-md-5 col-3">1500 €</div>
+                        <div class="right-info col-md-5 col-3">1500 (0) €</div>
 
                         <div class="left-info col-md-7 col-9">Доставка по Європi</div>
                         <div class="right-info col-md-5 col-3">0 €</div>
@@ -72,7 +71,7 @@
                         <div class="left-info col-md-7 col-9">Свіфт переказ</div>
                         <div class="right-info col-md-5 col-3">0 €</div>
                         <div class="left-info col-md-7 col-9" style="font-weight: 700;">Загальна вартість авто</div>
-                        <div class="right-info col-md-5 col-3" style="font-weight: 700; color: #007FFF;">0 €</div>
+                        <div class="right-info col-md-5 col-3" style="font-weight: 700; color: #007FFF;">0 (0) €</div>
                         <div class="col-md-12 col-12">
                             <a href="https://www.qdpro.com.ua/uk/calc/cars" target="_blank"><div class="btn-clearance">Порахувати розмитнення</div></a>
                         </div>
