--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Калькулятор віртості авто</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/script.js" defer></script>
@@ -23,7 +23,7 @@
                         <div class="col-md-12 col-sm-12 title-inputs">Виберіть країну</div>
                         <div class="select col-md-3 col-7">
                             <div class="select-header"><span class="select-current">DE</span></div>
-                            <div class="select-body">
+                            <div class="select-body country-index">
                                 <div class="select-item">DE</div>
                                 <div class="select-item">PL</div>
                                 <div class="select-item">FR</div>
@@ -42,22 +42,32 @@
                         <input class="text-field__input col-md-3 col-7" type="number" name="" id="" placeholder="Вартість послуг">
                         <div class="col-md-12 col-sm-12 title-inputs">Доставка по Європi (€)</div>
                         <input class="text-field__input col-md-3 col-7" type="number" name="" id="" placeholder="Доставка по Європi">
+                        <div class="col-md-12 col-sm-12 title-inputs">Рік випуску автомобіля</div>
+                        <input class="text-field__input col-md-3 col-7" type="number" name="" id="" placeholder="Рік випуску автомобіля">
+                        <div class="col-md-12 col-sm-12 title-inputs">Тип двигуна</div>
+                        <div class="select col-md-3 col-7">
+                            <div class="select-header"><span class="select-current">Бензиновий</span></div>
+                            <div class="select-body fuel-index">
+                                <div class="select-item">Бензиновий</div>
+                                <div class="select-item">Дизельний</div>
+                            </div>
+                        </div>
+                        <div class="col-md-12 col-sm-12 title-inputs">Об'єм двигуна (см3)</div>
+                        <input class="text-field__input col-md-3 col-7" type="number" name="" id="" placeholder="Об'єм двигуна">
                         <div class="col-md-12 col-sm-12 title-inputs">Кнопка</div>
                         <input type="checkbox" role="switch" class="neon">
-
                         <div class="btn-wrapper col-md-12 col-sm-12">
                             <div class="btn-calc">Розрахувати вартість</div>
                         </div>
                     </div>
+
                     <div class="col-md-5 col-12 outputs">
                         <div class="left-info col-md-7 col-9">Вартість авто + аукціонний збір</div>
                         <div class="right-info col-md-5 col-3">0,00 €</div>
                         <div class="left-info col-md-7 col-9">Доставка до України</div>
                         <div class="right-info col-md-5 col-3">450,00 €</div>
-
                         <div class="left-info col-md-7 col-9">Доставка по Європi</div>
                         <div class="right-info col-md-5 col-3">0,00 €</div>
-
                         <div class="left-info col-md-7 col-9">Брокер</div>
                         <div class="right-info col-md-5 col-3">250,00 €</div>
                         <div class="left-info col-md-7 col-9">Послуги з підбору</div>
@@ -67,6 +77,8 @@
                         <div class="left-info col-md-7 col-9">Кнопка</div>
                         <div class="right-info col-md-5 col-3">0,00 €</div>
                         <div class="left-info col-md-7 col-9">Свіфт переказ</div>
+                        <div class="right-info col-md-5 col-3">0,00 €</div>
+                        <div class="left-info col-md-7 col-9">Розмитнення</div>
                         <div class="right-info col-md-5 col-3">0,00 €</div>
                         <div class="left-info col-md-7 col-9" style="font-weight: 700;">Загальна вартість авто</div>
                         <div class="right-info col-md-5 col-3" style="font-weight: 700; color: #007FFF;">0,00 €</div>
@@ -98,13 +110,22 @@
                         <input class="text-field__input col-md-3 col-7" type="number" name="" id="" placeholder="Вартість авто">
                         <div class="col-md-12 col-sm-12 title-inputs">Вартість послуг (€)</div>
                         <input class="text-field__input col-md-3 col-7" type="number" name="" id="" placeholder="Вартість послуг">
-
                         <div class="col-md-12 col-sm-12 title-inputs">Доставка по Європi (€)</div>
                         <input class="text-field__input col-md-3 col-7" type="number" name="" id="" placeholder="Доставка по Європi">
-
+                        <div class="col-md-12 col-sm-12 title-inputs">Рік випуску автомобіля</div>
+                        <input class="text-field__input col-md-3 col-7" type="number" name="" id="" placeholder="Рік випуску автомобіля">
+                        <div class="col-md-12 col-sm-12 title-inputs">Тип двигуна</div>
+                        <div class="select col-md-3 col-7">
+                            <div class="select-header"><span class="select-current">Бензиновий</span></div>
+                            <div class="select-body fuel-index">
+                                <div class="select-item">Бензиновий</div>
+                                <div class="select-item">Дизельний</div>
+                            </div>
+                        </div>
+                        <div class="col-md-12 col-sm-12 title-inputs">Об'єм двигуна (см3)</div>
+                        <input class="text-field__input col-md-3 col-7" type="number" name="" id="" placeholder="Об'єм двигуна">
                         <div class="col-md-12 col-sm-12 title-inputs">Кнопка</div>
                         <input type="checkbox" role="switch" class="neon">
-                        
                         <div class="btn-wrapper col-md-12 col-sm-12">
                             <div class="btn-calc">Розрахувати вартість</div>
                         </div>
@@ -125,6 +146,8 @@
                         <div class="left-info col-md-7 col-9">Кнопка</div>
                         <div class="right-info col-md-5 col-3">0,00 €</div>
                         <div class="left-info col-md-7 col-9">Свіфт переказ</div>
+                        <div class="right-info col-md-5 col-3">0,00 €</div>
+                        <div class="left-info col-md-7 col-9">Розмитнення</div>
                         <div class="right-info col-md-5 col-3">0,00 €</div>
                         <div class="left-info col-md-7 col-9" style="font-weight: 700;">Загальна вартість авто</div>
                         <div class="right-info col-md-5 col-3" style="font-weight: 700; color: #007FFF;">0,00 €</div>
