--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
                         <div class="right-info col-md-5 col-3">0,00 €</div>
                         <div class="left-info col-md-7 col-9" style="font-weight: 700;">Загальна вартість авто</div>
                         <div class="right-info col-md-5 col-3" style="font-weight: 700; color: #007FFF;">0,00 €</div>
-                        <!-- <div class="col-md-12 col-12">
+                        <div class="col-md-12 col-12">
                             <a href="https://www.qdpro.com.ua/uk/calc/cars" target="_blank"><div class="btn-clearance">Порахувати розмитнення</div></a>
-                        </div> -->
+                        </div>
                     </div>
                 </div>
 
@@ -151,9 +151,9 @@
                         <div class="right-info col-md-5 col-3">0,00 €</div>
                         <div class="left-info col-md-7 col-9" style="font-weight: 700;">Загальна вартість авто</div>
                         <div class="right-info col-md-5 col-3" style="font-weight: 700; color: #007FFF;">0,00 €</div>
-                        <!-- <div class="col-md-12 col-12">
+                        <div class="col-md-12 col-12">
                             <a href="https://www.qdpro.com.ua/uk/calc/cars" target="_blank"><div class="btn-clearance">Порахувати розмитнення</div></a>
-                        </div> -->
+                        </div>
                     </div>
                 </div>
 
