--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     <div class="col-md-5 col-sm-5 inputs">
                         <div class="col-md-12 col-sm-12 title-inputs">Виберіть країну</div>
                         <div class="select col-md-3 col-7">
-                            <div class="select-header"><span class="select-current">DE</span></div>
-                            <div class="select-body country-index">
+                            <div class="select-header select-header-CC-Country"><span class="select-current">DE</span></div>
+                            <div class="select-body select-body-CC-Country country-index">
                                 <div class="select-item">DE</div>
                                 <div class="select-item">PL</div>
                                 <div class="select-item">FR</div>
@@ -37,47 +37,44 @@
                             </div>
                         </div>
                         <div class="col-md-12 col-sm-12 title-inputs">Вартість авто (€)</div>
-                        <input class="text-field__input col-md-3 col-7" type="number" name="" id="" placeholder="Вартість авто">
-                        <div class="col-md-12 col-sm-12 title-inputs">Вартість послуг (€)</div>
-                        <input class="text-field__input col-md-3 col-7" type="number" name="" id="" placeholder="Вартість послуг">
+                        <input class="text-field__input col-md-3 col-7 auto-Price-CC" type="number" name="" id="" placeholder="Вартість авто">
                         <div class="col-md-12 col-sm-12 title-inputs">Доставка по Європi (€)</div>
-                        <input class="text-field__input col-md-3 col-7" type="number" name="" id="" placeholder="Доставка по Європi">
+                        <input class="text-field__input col-md-3 col-7 europe-Price-CC" type="number" name="" id="" placeholder="Доставка по Європi">
+                        <div class="col-md-12 col-sm-12 title-inputs">Вартість послуг (€)</div>
+                        <input class="text-field__input col-md-3 col-7 service-Price-CC" type="number" name="" id="" placeholder="Вартість послуг">
+                        <div class="btn-wrapper col-md-12 col-sm-12">
+                            <div class="btn-calc btn-calc-CC-all-price">Розрахувати вартість</div>
+                        </div>
+
+
                         <div class="col-md-12 col-sm-12 title-inputs">Рік випуску автомобіля</div>
-                        <input class="text-field__input col-md-3 col-7" type="number" name="" id="" placeholder="Рік випуску автомобіля">
+                        <input class="text-field__input col-md-3 col-7 year-Release-CC" type="number" name="" id="" placeholder="Рік випуску автомобіля">
                         <div class="col-md-12 col-sm-12 title-inputs">Тип двигуна</div>
                         <div class="select col-md-3 col-7">
-                            <div class="select-header"><span class="select-current">Бензиновий</span></div>
-                            <div class="select-body fuel-index">
+                            <div class="select-header select-header-CC-Fuel"><span class="select-current">Бензиновий</span></div>
+                            <div class="select-body select-body-CC-Fuel">
                                 <div class="select-item">Бензиновий</div>
                                 <div class="select-item">Дизельний</div>
                             </div>
                         </div>
                         <div class="col-md-12 col-sm-12 title-inputs">Об'єм двигуна (см3)</div>
-                        <input class="text-field__input col-md-3 col-7" type="number" name="" id="" placeholder="Об'єм двигуна">
-                        <div class="col-md-12 col-sm-12 title-inputs">Кнопка</div>
-                        <input type="checkbox" role="switch" class="neon">
+                        <input class="text-field__input col-md-3 col-7 engine-Capacity-CC" type="number" name="" id="" placeholder="Об'єм двигуна">
                         <div class="btn-wrapper col-md-12 col-sm-12">
-                            <div class="btn-calc">Розрахувати вартість</div>
+                            <div class="btn-calc btn-calc-CC-clearance">Розрахувати розмитнення</div>
                         </div>
+
                     </div>
 
                     <div class="col-md-5 col-12 outputs">
                         <div class="left-info col-md-7 col-9">Вартість авто + аукціонний збір</div>
                         <div class="right-info col-md-5 col-3">0,00 €</div>
-                        <div class="left-info col-md-7 col-9">Доставка до України</div>
-                        <div class="right-info col-md-5 col-3">450,00 €</div>
                         <div class="left-info col-md-7 col-9">Доставка по Європi</div>
                         <div class="right-info col-md-5 col-3">0,00 €</div>
-                        <div class="left-info col-md-7 col-9">Брокер</div>
-                        <div class="right-info col-md-5 col-3">250,00 €</div>
                         <div class="left-info col-md-7 col-9">Послуги з підбору</div>
-                        <div class="right-info col-md-5 col-3">0,00 €</div>
-                        <div class="left-info col-md-7 col-9">Сертифікація</div>
-                        <div class="right-info col-md-5 col-3">100,00 €</div>
-                        <div class="left-info col-md-7 col-9">Кнопка</div>
                         <div class="right-info col-md-5 col-3">0,00 €</div>
                         <div class="left-info col-md-7 col-9">Свіфт переказ</div>
                         <div class="right-info col-md-5 col-3">100,00 €</div>
+
                         <div class="left-info col-md-7 col-9">Розмитнення</div>
                         <div class="right-info col-md-5 col-3">0,00 €</div>
                         <div class="left-info col-md-7 col-9" style="font-weight: 700;">Загальна вартість авто</div>
