--- a/index.html
+++ b/index.html
@@ -43,6 +43,24 @@
                         <div class="btn-wrapper col-md-12 col-sm-12">
                             <div class="btn-calc btn-calc-CC-all-price">Розрахувати вартість</div>
                         </div>
+
+
+                        <div class="col-md-12 col-sm-12 title-inputs">Рік випуску автомобіля</div>
+                        <input class="text-field__input col-md-3 col-7 year-Release-CC" type="number" name="" id="" placeholder="Рік випуску автомобіля">
+                        <div class="col-md-12 col-sm-12 title-inputs">Тип двигуна</div>
+                        <div class="select col-md-3 col-7">
+                            <div class="select-header select-header-CC-Fuel"><span class="select-current">Бензиновий</span></div>
+                            <div class="select-body select-body-CC-Fuel">
+                                <div class="select-item">Бензиновий</div>
+                                <div class="select-item">Дизельний</div>
+                            </div>
+                        </div>
+                        <div class="col-md-12 col-sm-12 title-inputs">Об'єм двигуна (см3)</div>
+                        <input class="text-field__input col-md-3 col-7 engine-Capacity-CC" type="number" name="" id="" placeholder="Об'єм двигуна">
+                        <div class="btn-wrapper col-md-12 col-sm-12">
+                            <div class="btn-calc btn-calc-CC-clearance">Розрахувати розмитнення</div>
+                        </div>
+
                     </div>
 
                     <div class="col-md-5 col-12 outputs">
@@ -53,6 +71,9 @@
                         <div class="left-info col-md-7 col-9">Послуги з підбору</div>
                         <div class="right-info col-md-5 col-3">0,00 €</div>
                         <div class="left-info col-md-7 col-9">Свіфт переказ</div>
+                        <div class="right-info col-md-5 col-3">0,00 €</div>
+
+                        <div class="left-info col-md-7 col-9">Розмитнення</div>
                         <div class="right-info col-md-5 col-3">0,00 €</div>
                         <div class="left-info col-md-7 col-9" style="font-weight: 700;">Загальна вартість авто</div>
                         <div class="right-info col-md-5 col-3" style="font-weight: 700; color: #007FFF;">0,00 €</div>
