--- a/index.html
+++ b/index.html
@@ -19,46 +19,50 @@
                 </div>
 
                 <div class="col-md-12 col-sm-12 calc-cost">
-                    <div class="col-md-5 col-sm-5 inputs">
-                        <div class="col-md-12 col-sm-12 title-inputs">Виберіть країну</div>
-                        <div class="select col-md-3 col-7">
-                            <div class="select-header select-header-CC-Country"><span class="select-current">DE</span></div>
-                            <div class="select-body select-body-CC-Country country-index">
-                                <div class="select-item">DE</div>
-                                <div class="select-item">PL</div>
-                                <div class="select-item">FR</div>
-                                <div class="select-item">NL</div>
-                                <div class="select-item">AT</div>
-                                <div class="select-item">BE</div>
-                                <div class="select-item">ES</div>
-                                <div class="select-item">SE</div>
-                                <div class="select-item">IT</div>
-                                <div class="select-item">PT</div>
+                    <div class="col-md-5 col-sm-12 inputs">
+
+                        <div class="inputs-item-flex">
+                            <div class="col-md-12 col-sm-6 col-12 title-inputs">Виберіть країну</div>
+                            <div class="select col-md-10 col-12">
+                                <div class="select-header select-header-CC-Country"><span class="select-current">DE</span></div>
+                                <div class="select-body select-body-CC-Country country-index">
+                                    <div class="select-item">DE</div>
+                                    <div class="select-item">PL</div>
+                                    <div class="select-item">FR</div>
+                                    <div class="select-item">NL</div>
+                                    <div class="select-item">AT</div>
+                                    <div class="select-item">BE</div>
+                                    <div class="select-item">ES</div>
+                                    <div class="select-item">SE</div>
+                                    <div class="select-item">IT</div>
+                                    <div class="select-item">PT</div>
+                                </div>
+                            </div>
+                            <div class="col-md-12 col-sm-12 col-12 title-inputs">Вартість авто (€)</div>
+                            <input class="text-field__input col-md-10 col-12 auto-Price-CC" type="number" name="" id="" placeholder="Вартість авто">
+                            <div class="col-md-12 col-sm-12 col-12 title-inputs">Доставка по Європi (€)</div>
+                            <input class="text-field__input col-md-10 col-12 europe-Price-CC" type="number" name="" id="" placeholder="Доставка по Європi">
+                            <div class="btn-wrapper col-md-10 col-sm-12 col-12">
+                                <div class="btn-calc col-md-12 btn-calc-CC-all-price">Розрахувати вартість</div>
                             </div>
                         </div>
-                        <div class="col-md-12 col-sm-12 title-inputs">Вартість авто (€)</div>
-                        <input class="text-field__input col-md-3 col-7 auto-Price-CC" type="number" name="" id="" placeholder="Вартість авто">
-                        <div class="col-md-12 col-sm-12 title-inputs">Доставка по Європi (€)</div>
-                        <input class="text-field__input col-md-3 col-7 europe-Price-CC" type="number" name="" id="" placeholder="Доставка по Європi">
-                        <div class="btn-wrapper col-md-12 col-sm-12">
-                            <div class="btn-calc btn-calc-CC-all-price">Розрахувати вартість</div>
-                        </div>
 
-
-                        <div class="col-md-12 col-sm-12 title-inputs">Рік випуску автомобіля</div>
-                        <input class="text-field__input col-md-3 col-7 year-Release-CC" type="number" name="" id="" placeholder="Рік випуску автомобіля">
-                        <div class="col-md-12 col-sm-12 title-inputs">Тип двигуна</div>
-                        <div class="select col-md-3 col-7">
-                            <div class="select-header select-header-CC-Fuel"><span class="select-current">Бензиновий</span></div>
-                            <div class="select-body select-body-CC-Fuel">
-                                <div class="select-item">Бензиновий</div>
-                                <div class="select-item">Дизельний</div>
+                        <div class="inputs-item-flex">
+                            <div class="col-md-12 col-sm-12 col-12 title-inputs">Рік випуску автомобіля</div>
+                            <input class="text-field__input col-md-10 col-12 year-Release-CC" type="number" name="" id="" placeholder="Рік випуску автомобіля">
+                            <div class="col-md-12 col-sm-12 col-12 title-inputs">Тип двигуна</div>
+                            <div class="select col-md-10 col-12">
+                                <div class="select-header select-header-CC-Fuel"><span class="select-current">Бензиновий</span></div>
+                                <div class="select-body select-body-CC-Fuel">
+                                    <div class="select-item">Бензиновий</div>
+                                    <div class="select-item">Дизельний</div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-md-12 col-sm-12 title-inputs">Об'єм двигуна (см3)</div>
-                        <input class="text-field__input col-md-3 col-7 engine-Capacity-CC" type="number" name="" id="" placeholder="Об'єм двигуна">
-                        <div class="btn-wrapper col-md-12 col-sm-12">
-                            <div class="btn-calc btn-calc-CC-clearance">Розрахувати розмитнення</div>
+                            <div class="col-md-12 col-sm-12 col-12 title-inputs">Об'єм двигуна (см3)</div>
+                            <input class="text-field__input col-md-10 col-12 engine-Capacity-CC" type="number" name="" id="" placeholder="Об'єм двигуна">
+                            <div class="btn-wrapper col-md-10 col-sm-12 col-12">
+                                <div class="btn-calc col-md-12 btn-calc-CC-clearance">Розрахувати розмитнення</div>
+                            </div>
                         </div>
 
                     </div>
