--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <div class="col-md-12 col-12 tabs-wrapper">
                     <div class="tab-main active">Калькулятор вартості</div>
                     <div class="tab-main">Оптовий калькулятор</div>
+                    <div class="tab-main">Калькулятор Америка</div>
                 </div>
 
                 <div class="col-md-12 col-sm-12 calc-cost">
@@ -153,6 +154,69 @@
                         <div class="col-md-12 col-12">
                             <a href="https://www.qdpro.com.ua/uk/calc/cars" target="_blank"><div class="btn-clearance">Порахувати розмитнення</div></a>
                         </div>
+                    </div>
+                </div>
+
+
+                <div class="col-md-12 col-sm-12 calc-america">
+                    <div class="col-md-5 col-sm-5 inputs">
+
+                        <div class="col-md-5 col-sm-12 col-12 title-inputs">Вартість авто (€)</div>
+                        <input class="text-field__input col-md-5 col-12 auto-Price-America" type="number" name="" id="" placeholder="Вартість авто">
+                        
+                        <div class="col-md-5 col-sm-12 col-12 title-inputs">Штат</div>
+                        <div class="select col-md-5 col-12">
+                            <div class="select-header select-header-State-America"><span class="select-current">ABILENE - TX</span></div>
+                            <div class="select-body select-body-State-America">
+                                <div class="seacrch-wrapper">
+                                    <div class="text-field__icon-2 text-field__icon-2_search">
+                                        <input class="text-field__input_state" type="text" placeholder="Штат" value="">
+                                      </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-5 col-sm-12 col-12 title-inputs">Тип двигуна</div>
+                        <div class="select col-md-5 col-12">
+                            <div class="select-header select-header-Fuel-America"><span class="select-current">Бензиновий</span></div>
+                            <div class="select-body select-body-Fuel-America">
+                                <div class="select-item">Бензиновий</div>
+                                <div class="select-item">Дизельний</div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-5 col-sm-12 col-12 title-inputs">Об'єм двигуна (см3)</div>
+                        <input class="text-field__input col-md-5 col-12 engine-Capacity-America" type="number" name="" id="" placeholder="Об'єм двигуна">
+
+                        <div class="col-md-5 col-sm-12 col-12 title-inputs">Рік випуску автомобіля</div>
+                        <input class="text-field__input col-md-5 col-12 year-Release-America" type="number" name="" id="" placeholder="Рік випуску автомобіля">
+
+                        <div class="col-md-5 col-sm-12 col-12 title-inputs">Аукціон</div>
+                        <input class="text-field__input col-md-5 col-12 auction-America" type="number" name="" id="" placeholder="Аукціон">
+
+                        <div class="btn-wrapper col-md-5 col-sm-12 col-12">
+                            <div class="btn-calc col-md-12 btn-calc-America-all-price">Розрахувати вартість</div>
+                        </div>
+
+                    </div>
+                    <div class="col-md-5 col-12 outputs">
+
+                        <div class="left-info col-md-8 col-9">Вартість авто + аукціонний збір</div>
+                        <div class="right-info col-md-4 col-3">0,00 €</div>
+                        <div class="left-info col-md-8 col-9">Брокер</div>
+                        <div class="right-info col-md-4 col-3">250,00 €</div>
+                        <div class="left-info col-md-8 col-9">Послуги з підбору</div>
+                        <div class="right-info col-md-4 col-3">550,00 €</div>
+                        <div class="left-info col-md-8 col-9">Цiна контейнеру</div>
+                        <div class="right-info col-md-4 col-3">0,00 €</div>
+                        <div class="left-info col-md-8 col-9">Доставка в порт</div>
+                        <div class="right-info col-md-4 col-3">0,00 €</div>
+
+                        <div class="left-info col-md-8 col-9">Розмитнення</div>
+                        <div class="right-info col-md-4 col-3">0,00 €</div>
+                        <div class="left-info col-md-8 col-9" style="font-weight: 700;">Загальна вартість авто</div>
+                        <div class="right-info col-md-4 col-3" style="font-weight: 700; color: #007FFF;">0,00 €</div>
+
                     </div>
                 </div>
 
