--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <div class="col-md-12 col-sm-12 calc-america">
                     <div class="col-md-5 col-sm-5 inputs">
 
-                        <div class="col-md-5 col-sm-12 col-12 title-inputs">Вартість авто (€)</div>
+                        <div class="col-md-5 col-sm-12 col-12 title-inputs">Вартість авто ($)</div>
                         <input class="text-field__input col-md-5 col-12 auto-Price-America" type="number" name="" id="" placeholder="Вартість авто">
                         
                         <div class="col-md-5 col-sm-12 col-12 title-inputs">Штат</div>
@@ -190,33 +190,28 @@
 
                         <div class="col-md-5 col-sm-12 col-12 title-inputs">Рік випуску автомобіля</div>
                         <input class="text-field__input col-md-5 col-12 year-Release-America" type="number" name="" id="" placeholder="Рік випуску автомобіля">
-
-                        <div class="col-md-5 col-sm-12 col-12 title-inputs">Аукціон</div>
-                        <input class="text-field__input col-md-5 col-12 auction-America" type="number" name="" id="" placeholder="Аукціон">
-
+                        
                         <div class="btn-wrapper col-md-5 col-sm-12 col-12">
                             <div class="btn-calc col-md-12 btn-calc-America-all-price">Розрахувати вартість</div>
                         </div>
 
                     </div>
                     <div class="col-md-5 col-12 outputs">
-
                         <div class="left-info col-md-8 col-9">Вартість авто + аукціонний збір</div>
-                        <div class="right-info col-md-4 col-3">0,00 €</div>
+                        <div class="right-info col-md-4 col-3">$0,00</div>
                         <div class="left-info col-md-8 col-9">Брокер</div>
-                        <div class="right-info col-md-4 col-3">250,00 €</div>
+                        <div class="right-info col-md-4 col-3">$250,00</div>
                         <div class="left-info col-md-8 col-9">Послуги з підбору</div>
-                        <div class="right-info col-md-4 col-3">550,00 €</div>
+                        <div class="right-info col-md-4 col-3">$550,00</div>
                         <div class="left-info col-md-8 col-9">Цiна контейнеру</div>
-                        <div class="right-info col-md-4 col-3">0,00 €</div>
+                        <div class="right-info col-md-4 col-3">$0,00</div>
                         <div class="left-info col-md-8 col-9">Доставка в порт</div>
-                        <div class="right-info col-md-4 col-3">0,00 €</div>
+                        <div class="right-info col-md-4 col-3">$0,00</div>
 
                         <div class="left-info col-md-8 col-9">Розмитнення</div>
-                        <div class="right-info col-md-4 col-3">0,00 €</div>
+                        <div class="right-info col-md-4 col-3">$0,00</div>
                         <div class="left-info col-md-8 col-9" style="font-weight: 700;">Загальна вартість авто</div>
-                        <div class="right-info col-md-4 col-3" style="font-weight: 700; color: #007FFF;">0,00 €</div>
-
+                        <div class="right-info col-md-4 col-3" style="font-weight: 700; color: #007FFF;">$0,00</div>
                     </div>
                 </div>
 
