--- a/index.html
+++ b/index.html
@@ -205,6 +205,8 @@
                         <div class="right-info col-md-4 col-3">$550,00</div>
                         <div class="left-info col-md-8 col-9">Доставка в порт</div>
                         <div class="right-info col-md-4 col-3">$0,00</div>
+                        <div class="left-info col-md-8 col-9">Доставка морем</div>
+                        <div class="right-info col-md-4 col-3">$0,00</div>
                         <div class="left-info col-md-8 col-9">Свіфт</div>
                         <div class="right-info col-md-4 col-3">$0,00</div>
 
