--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </div>
 
                 <div class="col-md-12 col-sm-12 calc-cost">
-                    <div class="col-md-5 col-sm-12 inputs">
+                    <div class="col-md-5 col-sm-12 inputs inputs-flex">
 
                         <div class="inputs-item-flex">
                             <div class="col-md-12 col-sm-6 col-12 title-inputs">Виберіть країну</div>
@@ -43,6 +43,8 @@
                             <input class="text-field__input col-md-12 col-12 auto-Price-CC" type="number" name="" id="" placeholder="Вартість авто">
                             <div class="col-md-12 col-sm-12 col-12 title-inputs">Доставка по Європi (€)</div>
                             <input class="text-field__input col-md-12 col-12 europe-Price-CC" type="number" name="" id="" placeholder="Доставка по Європi">
+                            <div class="col-md-12 col-sm-12 title-inputs">Кнопка</div>
+                            <input type="checkbox" role="switch" class="neon fix-neon">
                             <div class="btn-wrapper col-md-12 col-sm-12 col-12">
                                 <div class="btn-calc col-md-12 btn-calc-CC-all-price">Розрахувати вартість</div>
                             </div>
