--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/script.js" defer></script>
+    <link rel="shortcut icon" href="img/dreamauto_logo_01.webp" type="image/png">
 </head>
 <body>
     <div class="container-fluid">
