--- a/index.html
+++ b/index.html
@@ -85,8 +85,48 @@
                         <div class="right-info col-md-4 col-3">0,00 €</div>
                         <div class="left-info col-md-8 col-9" style="font-weight: 700;">Загальна вартість авто</div>
                         <div class="right-info col-md-4 col-3" style="font-weight: 700; color: #007FFF;">0,00 €</div>
-                        <div class="col-md-12 col-12">
-                            <a href="https://www.qdpro.com.ua/uk/calc/cars" target="_blank"><div class="btn-clearance">Порахувати розмитнення</div></a>
+                        <div class="col-md-12 col-12 d_flex">
+
+                            <div class="currencyExchange-wrapper col-md-6 col-12">
+                                <div class="currency-item">
+                                    <div class="item-s">
+                                        <label>Валюта</label>
+                                        <div class="select-header select-header-currency"><span class="select-current">USD</span></div>
+                                        <div class="select-body select-body-currency">
+                                            <div class="select-item">USD</div>
+                                            <div class="select-item">UAH</div>
+                                            <div class="select-item">EUR</div>
+                                        </div>
+                                    </div>
+                                    <div class="item-v">
+                                        <label>Кількість</label>
+                                        <input type="number" class="text-field__input col-md-12" placeholder="0">
+                                    </div>
+                                </div>
+                                <div class="currency-item">
+                                    <div class="item-s">
+                                        <label>Валюта</label>
+                                        <div class="select-header select-header-currency"><span class="select-current">UAH</span></div>
+                                        <div class="select-body select-body-currency">
+                                            <div class="select-item">UAH</div>
+                                            <div class="select-item">USD</div>
+                                            <div class="select-item">EUR</div>
+                                        </div>
+                                    </div>
+                                    <div class="item-v">
+                                        <label>Кількість</label>
+                                        <input type="number" class="text-field__input col-md-12" disabled placeholder="0">
+                                    </div>
+                                </div>
+
+                                <div class="info-btn-wrapper">
+                                    <div class="info-label">1 ${currcency[0]} = ${value} ${currency[1]}</div>
+                                    <div class="btn-exchange-currency">Поміняти валюту</div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-12 link-fix">
+                                <a href="https://www.qdpro.com.ua/uk/calc/cars" target="_blank"><div class="btn-clearance">Порахувати розмитнення</div></a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -95,7 +135,7 @@
                     <div class="col-md-5 col-sm-5 inputs">
                         <div class="col-md-12 col-sm-12 title-inputs">Виберіть країну</div>
                         <div class="select col-md-3 col-7">
-                            <div class="select-header"><span class="select-current">DE</span></div>
+                            <div class="select-header select-header-wholesale"><span class="select-current">DE</span></div>
                             <div class="select-body">
                                 <div class="select-item">DE</div>
                                 <div class="select-item">PL</div>
@@ -154,8 +194,48 @@
                         <div class="right-info col-md-4 col-3">0,00 €</div>
                         <div class="left-info col-md-8 col-9" style="font-weight: 700;">Загальна вартість авто</div>
                         <div class="right-info col-md-4 col-3" style="font-weight: 700; color: #007FFF;">0,00 €</div>
-                        <div class="col-md-12 col-12">
-                            <a href="https://www.qdpro.com.ua/uk/calc/cars" target="_blank"><div class="btn-clearance">Порахувати розмитнення</div></a>
+
+                        <div class="col-md-12 col-12 d_flex">
+                            <div class="currencyExchange-wrapper col-md-6">
+                                <div class="currency-item">
+                                    <div class="item-s">
+                                        <label>Валюта</label>
+                                        <div class="select-header select-header-currency"><span class="select-current">USD</span></div>
+                                        <div class="select-body select-body-currency">
+                                            <div class="select-item">USD</div>
+                                            <div class="select-item">UAH</div>
+                                            <div class="select-item">EUR</div>
+                                        </div>
+                                    </div>
+                                    <div class="item-v">
+                                        <label>Кількість</label>
+                                        <input type="number" class="text-field__input col-md-12" placeholder="0">
+                                    </div>
+                                </div>
+                                <div class="currency-item">
+                                    <div class="item-s">
+                                        <label>Валюта</label>
+                                        <div class="select-header select-header-currency"><span class="select-current">UAH</span></div>
+                                        <div class="select-body select-body-currency">
+                                            <div class="select-item">UAH</div>
+                                            <div class="select-item">USD</div>
+                                            <div class="select-item">EUR</div>
+                                        </div>
+                                    </div>
+                                    <div class="item-v">
+                                        <label>Кількість</label>
+                                        <input type="number" class="text-field__input col-md-12" disabled placeholder="0">
+                                    </div>
+                                </div>
+
+                                <div class="info-btn-wrapper">
+                                    <div class="info-label">1 ${currcency[0]} = ${value} ${currency[1]}</div>
+                                    <div class="btn-exchange-currency">Поміняти валюту</div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-12 link-fix">
+                                <a href="https://www.qdpro.com.ua/uk/calc/cars" target="_blank"><div class="btn-clearance">Порахувати розмитнення</div></a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -217,6 +297,48 @@
                         <div class="right-info col-md-4 col-3">$0,00</div>
                         <div class="left-info col-md-8 col-9" style="font-weight: 700;">Загальна вартість авто</div>
                         <div class="right-info col-md-4 col-3" style="font-weight: 700; color: #007FFF;">$0,00</div>
+                        <div class="col-md-12 col-12 d_flex">
+                            <div class="currencyExchange-wrapper col-md-6">
+                                <div class="currency-item">
+                                    <div class="item-s">
+                                        <label>Валюта</label>
+                                        <div class="select-header select-header-currency"><span class="select-current">USD</span></div>
+                                        <div class="select-body select-body-currency">
+                                            <div class="select-item">USD</div>
+                                            <div class="select-item">UAH</div>
+                                            <div class="select-item">EUR</div>
+                                        </div>
+                                    </div>
+                                    <div class="item-v">
+                                        <label>Кількість</label>
+                                        <input type="number" class="text-field__input col-md-12" placeholder="0">
+                                    </div>
+                                </div>
+                                <div class="currency-item">
+                                    <div class="item-s">
+                                        <label>Валюта</label>
+                                        <div class="select-header select-header-currency"><span class="select-current">UAH</span></div>
+                                        <div class="select-body select-body-currency">
+                                            <div class="select-item">UAH</div>
+                                            <div class="select-item">USD</div>
+                                            <div class="select-item">EUR</div>
+                                        </div>
+                                    </div>
+                                    <div class="item-v">
+                                        <label>Кількість</label>
+                                        <input type="number" class="text-field__input col-md-12" disabled placeholder="0">
+                                    </div>
+                                </div>
+
+                                <div class="info-btn-wrapper">
+                                    <div class="info-label">1 ${currcency[0]} = ${value} ${currency[1]}</div>
+                                    <div class="btn-exchange-currency">Поміняти валюту</div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-12 link-fix">
+                                <a href="https://www.qdpro.com.ua/uk/calc/cars" target="_blank"><div class="btn-clearance">Порахувати розмитнення</div></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
