--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
                                 <div class="currency-item">
                                     <div class="item-s">
                                         <label>Валюта</label>
-                                        <div class="select-header select-header-currency"><span class="select-current">USD</span></div>
+                                        <div class="select-header select-header-currency"><span class="select-current">EUR</span></div>
                                         <div class="select-body select-body-currency">
-                                            <div class="select-item">USD</div>
-                                            <div class="select-item">UAH</div>
                                             <div class="select-item">EUR</div>
+                                            <div class="select-item">UAH</div>
+                                            <div class="select-item">USD</div>
                                         </div>
                                     </div>
                                     <div class="item-v">
@@ -121,7 +121,7 @@
 
                                 <div class="info-btn-wrapper">
                                     <div class="info-label">1 ${currcency[0]} = ${value} ${currency[1]}</div>
-                                    <div class="btn-exchange-currency">Поміняти валюту</div>
+                                    <!-- <div class="btn-exchange-currency">Поміняти валюту</div> -->
                                 </div>
                             </div>
                             <div class="col-md-6 col-12 link-fix">
@@ -230,7 +230,7 @@
 
                                 <div class="info-btn-wrapper">
                                     <div class="info-label">1 ${currcency[0]} = ${value} ${currency[1]}</div>
-                                    <div class="btn-exchange-currency">Поміняти валюту</div>
+                                    <!-- <div class="btn-exchange-currency">Поміняти валюту</div> -->
                                 </div>
                             </div>
                             <div class="col-md-6 col-12 link-fix">
@@ -332,7 +332,7 @@
 
                                 <div class="info-btn-wrapper">
                                     <div class="info-label">1 ${currcency[0]} = ${value} ${currency[1]}</div>
-                                    <div class="btn-exchange-currency">Поміняти валюту</div>
+                                    <!-- <div class="btn-exchange-currency">Поміняти валюту</div> -->
                                 </div>
                             </div>
                             <div class="col-md-6 col-12 link-fix">
