--- a/index.html
+++ b/index.html
@@ -119,6 +119,17 @@
                                     </div>
                                 </div>
 
+                                <div class="currency-cross">
+                                    <div class="item-s">
+                                        <label>EUR / USD</label>
+                                        <input type="number" class="text-field__input col-md-12" id="EUR_USD" placeholder="0">
+                                    </div>
+                                    <div class="item-s">
+                                        <label>USD / EUR</label>
+                                        <input type="number" class="text-field__input col-md-12" id="USD_EUR" placeholder="0">
+                                    </div>
+                                </div>
+
                                 <div class="info-btn-wrapper">
                                     <div class="info-label">1 ${currcency[0]} = ${value} ${currency[1]}</div>
                                     <!-- <div class="btn-exchange-currency">Поміняти валюту</div> -->
@@ -228,6 +239,17 @@
                                     </div>
                                 </div>
 
+                                <div class="currency-cross">
+                                    <div class="item-s">
+                                        <label>EUR / USD</label>
+                                        <input type="number" class="text-field__input col-md-12" id="EUR_USD" name="fix-check" placeholder="0">
+                                    </div>
+                                    <div class="item-s">
+                                        <label>USD / EUR</label>
+                                        <input type="number" class="text-field__input col-md-12" id="USD_EUR" name="fix-check" placeholder="0">
+                                    </div>
+                                </div>
+
                                 <div class="info-btn-wrapper">
                                     <div class="info-label">1 ${currcency[0]} = ${value} ${currency[1]}</div>
                                     <!-- <div class="btn-exchange-currency">Поміняти валюту</div> -->
@@ -327,6 +349,17 @@
                                     <div class="item-v">
                                         <label>Кількість</label>
                                         <input type="number" class="text-field__input col-md-12" disabled placeholder="0">
+                                    </div>
+                                </div>
+
+                                <div class="currency-cross">
+                                    <div class="item-s">
+                                        <label>EUR / USD</label>
+                                        <input type="number" class="text-field__input col-md-12" id="EUR_USD" placeholder="0">
+                                    </div>
+                                    <div class="item-s">
+                                        <label>USD / EUR</label>
+                                        <input type="number" class="text-field__input col-md-12" id="USD_EUR" placeholder="0">
                                     </div>
                                 </div>
 
