--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
 
                         <div class="left-info col-md-8 col-9">Розмитнення</div>
                         <div class="right-info col-md-4 col-3">0,00 €</div>
+
+                        <div class="li-payment col-md-8 col-9">Оплатити протягом 3-х днів</div>
+                        <div class="ri-payment col-md-4 col-3">0,00 €</div>
+
                         <div class="left-info col-md-8 col-9" style="font-weight: 700;">Загальна вартість авто</div>
                         <div class="right-info col-md-4 col-3" style="font-weight: 700; color: #007FFF;">0,00 €</div>
                         <div class="col-md-12 col-12 d_flex">
@@ -192,6 +196,10 @@
                         <div class="right-info col-md-4 col-3">100,00 €</div>
                         <div class="left-info col-md-8 col-9">Розмитнення</div>
                         <div class="right-info col-md-4 col-3">0,00 €</div>
+
+                        <div class="li-payment col-md-8 col-9">Оплатити протягом 3-х днів</div>
+                        <div class="ri-payment col-md-4 col-3">0,00 €</div>
+
                         <div class="left-info col-md-8 col-9" style="font-weight: 700;">Загальна вартість авто</div>
                         <div class="right-info col-md-4 col-3" style="font-weight: 700; color: #007FFF;">0,00 €</div>
 
@@ -295,6 +303,10 @@
 
                         <div class="left-info col-md-8 col-9">Розмитнення</div>
                         <div class="right-info col-md-4 col-3">$0,00</div>
+
+                        <div class="li-payment col-md-8 col-9">Оплатити протягом 3-х днів</div>
+                        <div class="ri-payment col-md-4 col-3">0,00 €</div>
+
                         <div class="left-info col-md-8 col-9" style="font-weight: 700;">Загальна вартість авто</div>
                         <div class="right-info col-md-4 col-3" style="font-weight: 700; color: #007FFF;">$0,00</div>
                         <div class="col-md-12 col-12 d_flex">
