--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                         <div class="right-info col-md-4 col-3" style="font-weight: 700; color: #007FFF;">$0,00</div>
 
                         <div class="li-payment col-md-8 col-9">Оплатити протягом 3-х днів</div>
-                        <div class="ri-payment col-md-4 col-3">0,00 €</div>
+                        <div class="ri-payment col-md-4 col-3">$0,00</div>
                         
                         <div class="col-md-12 col-12 d_flex">
                             <div class="currencyExchange-wrapper col-md-6">
