--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <div class="tab-main active">Калькулятор вартості</div>
                     <div class="tab-main">Оптовий калькулятор</div>
                     <div class="tab-main">Калькулятор Америка</div>
-                    <div class="tab-main">Калькулятор адресної доставки</div>
+                    <!-- <div class="tab-main">Калькулятор адресної доставки</div> -->
                 </div>
 
                 <div class="col-md-12 col-sm-12 calc-cost">
@@ -352,7 +352,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-12 col-sm-12 calc-address-delivery">
+                <!-- <div class="col-md-12 col-sm-12 calc-address-delivery">
                     <div class="col-md-5 col-sm-5 inputs">
                         <div class="col-md-5 col-sm-12 col-12 title-inputs">Відстань (км)</div>
                         <input class="text-field__input col-md-5 col-12 distance-delivery" type="number" name="" id="" placeholder="Відстань доставки">
@@ -373,7 +373,7 @@
                         <div class="left-info col-md-8 col-9"> Загальна собівартість перевезення</div>
                         <div class="right-info col-md-4 col-3">0,00 грн</div>
                     </div>
-                </div>
+                </div> -->
 
             </div>
         </div>
